--- a/css/style.css
+++ b/css/style.css
@@ -8,7 +8,7 @@
 }
 .product_img{
     width: 40%;
-    padding-top:34%;
+    padding-top:40%;
     background-image: url("https://cdn.pancake.vn/1/s600x600/57/c3/7a/66/aa66e5fc6d69090e25679db1f81a1185930f5a70a6d049f77bcd9856.jpg");
     margin: 0 auto;
     background-repeat: no-repeat;
@@ -48,12 +48,17 @@
     margin: 0;
 }
 .category-list{
-    width: 12%;
-
+    width: 20%;
+}
+.course{
+    width: 80%;
+    display: flex;
+    flex-wrap: wrap;
+    padding-bottom: 20px;
 }
 .course1, .course2, .course3, .course4{
-    width: 22%;
-    margin-left: 20px;
+    width: 25%;
+    padding-right: 20px;
 }
 .cards{
     width: 100%;
@@ -61,10 +66,11 @@
     font-size: 14px;
     line-height: 20px;
     margin-bottom: 100px;
+    flex-wrap: wrap;
 }
 .card{
-    width: 100%;
-    margin: 0 25px;
+    width: 30%;
+    margin: 10px auto;
     background-color: #66FF66;
     padding: 10px 40px;
     border-radius: 20px;
@@ -86,4 +92,7 @@
 .card:nth-child(3){
     background-color: #66CCFF;
     color: #000000;
+}
+p {
+    margin: 0;
 }
